--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.chenls.smartshoepad">
+    package="com.chenls.smartshoepad" >
+
     <!-- 蓝牙相关的权限 -->
     <uses-permission android:name="android.permission.BLUETOOTH" />
     <uses-permission android:name="android.permission.BLUETOOTH_ADMIN" />
@@ -22,15 +23,16 @@
     <uses-permission android:name="android.permission.CHANGE_WIFI_STATE" />
     <!-- 读写存储卡的权限 -->
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
-        android:theme="@style/Theme.Timetodo">
+        android:theme="@style/Theme.Timetodo" >
         <activity
             android:name=".welcome.PageViewActivity"
             android:configChanges="keyboardHidden|orientation|screenSize"
-            android:label="@string/app_name">
+            android:label="@string/app_name" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -65,11 +67,15 @@
             android:name=".main.AboutSLActivity"
             android:label="@string/title_activity_about_sl"
             android:theme="@style/DialogLight" />
-
         <activity
             android:name=".welcome.SetActivity"
             android:label="@string/title_activity_set"
-            android:theme="@style/DialogLight"></activity>
+            android:theme="@style/DialogLight" />
+        <activity
+            android:name=".main.WarningSetActivity"
+            android:label="@string/title_activity_warning_set"
+            android:theme="@style/DialogLight">
+        </activity>
     </application>
 
 </manifest>
