--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -64,7 +64,7 @@
             android:label="@string/title_activity_input"
             android:theme="@style/DialogLight" />
         <activity
-            android:name=".main.AboutSLActivity"
+            android:name=".main.AboutActivity"
             android:label="@string/title_activity_about_sl"
             android:theme="@style/DialogLight" />
         <activity
