--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.chenls.smartshoepad" >
+    package="com.chenls.smartshoepad">
 
     <!-- 蓝牙相关的权限 -->
     <uses-permission android:name="android.permission.BLUETOOTH" />
@@ -9,8 +9,10 @@
     <uses-permission android:name="android.permission.READ_PHONE_STATE" />
     <!-- 手机震动的权限 -->
     <uses-permission android:name="android.permission.VIBRATE" />
-    <!-- 发送短信的权限 -->
+    <!-- 短信相关的权限 -->
     <uses-permission android:name="android.permission.SEND_SMS" />
+    <uses-permission android:name="android.permission.RECEIVE_SMS" />
+    <uses-permission android:name="android.permission.READ_SMS" />
     <!-- 访问网络的权限 -->
     <uses-permission android:name="android.permission.INTERNET" />
     <!-- 访问精确位置的权限 -->
@@ -30,11 +32,11 @@
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
-        android:theme="@style/Theme.Timetodo" >
+        android:theme="@style/Theme.Timetodo">
         <activity
             android:name=".welcome.PageViewActivity"
             android:configChanges="keyboardHidden|orientation|screenSize"
-            android:label="@string/app_name" >
+            android:label="@string/app_name">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -76,8 +78,7 @@
         <activity
             android:name=".main.WarningSetActivity"
             android:label="@string/title_activity_warning_set"
-            android:theme="@style/DialogLight">
-        </activity>
+            android:theme="@style/DialogLight" />
     </application>
 
 </manifest>
