--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.chenls.smartshoepad">
+    package="com.cqupt.pedometer">
 
     <!-- 蓝牙相关的权限 -->
     <uses-permission android:name="android.permission.BLUETOOTH" />
@@ -34,7 +34,7 @@
         android:label="@string/app_name"
         android:theme="@style/Theme.Timetodo">
         <activity
-            android:name=".welcome.PageViewActivity"
+            android:name="com.cqupt.pedometer.welcome.PageViewActivity"
             android:configChanges="keyboardHidden|orientation|screenSize"
             android:label="@string/app_name">
             <intent-filter>
@@ -43,40 +43,40 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".main.WelcomeActivity" />
+        <activity android:name="com.cqupt.pedometer.main.WelcomeActivity" />
         <activity
-            android:name=".main.DeviceListActivity"
+            android:name="com.cqupt.pedometer.main.DeviceListActivity"
             android:theme="@style/DialogLight" />
         <activity
-            android:name=".main.MainActivity"
+            android:name="com.cqupt.pedometer.main.MainActivity"
             android:label="@string/title_activity_welcome" />
 
         <service
-            android:name=".main.UartService"
+            android:name="com.cqupt.pedometer.main.UartService"
             android:enabled="true" />
 
         <activity
-            android:name=".main.SettingActivity"
+            android:name="com.cqupt.pedometer.main.SettingActivity"
             android:label="@string/title_activity_setting"
             android:theme="@style/DialogLight" />
         <activity
-            android:name=".setting.Choose"
+            android:name="com.cqupt.pedometer.setting.Choose"
             android:label="@string/title_activity_choose"
             android:theme="@style/DialogLight" />
         <activity
-            android:name=".setting.Input"
+            android:name="com.cqupt.pedometer.setting.Input"
             android:label="@string/title_activity_input"
             android:theme="@style/DialogLight" />
         <activity
-            android:name=".main.AboutActivity"
+            android:name="com.cqupt.pedometer.main.AboutActivity"
             android:label="@string/title_activity_about_sl"
             android:theme="@style/DialogLight" />
         <activity
-            android:name=".welcome.SetActivity"
+            android:name="com.cqupt.pedometer.welcome.SetActivity"
             android:label="@string/title_activity_set"
             android:theme="@style/DialogLight" />
         <activity
-            android:name=".main.WarningSetActivity"
+            android:name="com.cqupt.pedometer.main.WarningSetActivity"
             android:label="@string/title_activity_warning_set"
             android:theme="@style/DialogLight" />
     </application>
